--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -77,6 +77,11 @@ jobs:
           # CONFIG_TARGET_x86_64=y
           # CONFIG_TARGET_x86_64_Generic=y
           # EOF
+          cat >> .config <<EOF
+          CONFIG_TARGET_BOARD="mvebu"
+          CONFIG_TARGET_SUBTARGET="cortexa9"
+          CONFIG_TARGET_PROFILE="DEVICE_linksys_wrt1900acs"
+          EOF
           # 固件压缩:
           # cat >> .config <<EOF
           # CONFIG_TARGET_IMAGES_GZIP=y
